apps/system-telemetry/telegraf-syslog.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: telegraf-syslog
  name: telegraf-syslog
  namespace: system-telemetry
spec:
  selector:
    matchLabels:
      app: telegraf-syslog
  template:
    metadata:
      labels:
        app: telegraf-syslog
      namespace: system-telemetry
    spec:
      containers:
        - name: telegraf
          image: telegraf:1.16-alpine
          ports:
            - containerPort: 514
              protocol: TCP
            - containerPort: 514
              protocol: UDP
          # readinessProbe:
          resources:
            limits:
              cpu: "1000m"
              memory: "128Mi"
            requests:
              cpu: "0"
              memory: "0"
          volumeMounts:
            - mountPath: /etc/telegraf/telegraf.conf
              name: config
              subPath: telegraf.conf
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: telegraf-syslog-config
