apps/system-telemetry/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: system-telemetry-ingress
  namespace: system-telemetry
spec:
  rules:
    - host: telemetry.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: influxdb
                port:
                  number: 8086

---
apiVersion: v1
kind: Service
metadata:
  name: telegraf-syslog-tcp
  namespace: system-telemetry
spec:
  selector:
    app: telegraf-syslog
  ports:
    - port: 514
      protocol: TCP
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: telegraf-syslog-udp
  namespace: system-telemetry
spec:
  selector:
    app: telegraf-syslog
  ports:
    - port: 514
      protocol: UDP
  type: LoadBalancer
